inc/MetalOS.h

enum class DayOfWeek
{
	Sunday,
	Monday,
	Tuesday,
	Wednesday,
	Thursday,
	Friday,
	Saturday
};
struct SystemTime
{
	uint16_t Year;
	uint16_t Month;
	DayOfWeek DayOfTheWeek;
	uint16_t Day;
	uint16_t Hour;
	uint16_t Minute;
	uint16_t Second;
	uint16_t Milliseconds;
};
struct SystemInfo
{
	uint32_t PageSize;
	SystemArchitecture Architecture;
	uint32_t NumberOfProcessors;
	uint32_t AllocationGranularity;
	uintptr_t MinimumApplicationAddress;
	uintptr_t MaximumApplicationAddress;
};
enum class GenericAccess
{
	Read = (1 << 0),
	Write = (1 << 1),
};
typedef void* Handle;
typedef void* HThread;
typedef void* HSharedMemory;
typedef void* HRingBuffer;
typedef size_t (*ThreadStart)(void* parameter);
typedef uint16_t VirtualKey;
enum class MessageType
{
	KeyEvent,
	MouseEvent,
	PaintEvent,
};
struct MessageHeader
{
	MessageType MessageType;
};
struct KeyEvent
{
	VirtualKey Key;
	struct
	{
		uint16_t Pressed : 1;
	} Flags;
};
struct MouseButtonState
{
	uint8_t LeftPressed : 1;
	uint8_t RightPressed : 1;
};
struct MouseEvent
{
	MouseButtonState Buttons;
	uint16_t XPosition;
	uint16_t YPosition;
};
struct PaintEvent
{
	Rectangle Region;
};
//Semaphores
//Handle CreateSemaphore(size_t initial, size_t maximum, const char* name);
//SYSTEMCALL ReleaseSemaphore(Handle hSemaphore, size_t releaseCount, size_t* previousCount);

typedef void* HWindow;