crates/metalos/src/metalos_bindings.rs

#[test]
fn bindgen_test_layout_SystemTime() {
    assert_eq!(
        ::core::mem::size_of::<SystemTime>(),
        20usize,
        concat!("Size of: ", stringify!(SystemTime))
    );
    assert_eq!(
        ::core::mem::align_of::<SystemTime>(),
        4usize,
        concat!("Alignment of ", stringify!(SystemTime))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<SystemTime>())).Year as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(SystemTime),
            "::",
            stringify!(Year)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<SystemTime>())).Month as *const _ as usize },
        2usize,
        concat!(
            "Offset of field: ",
            stringify!(SystemTime),
            "::",
            stringify!(Month)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<SystemTime>())).DayOfTheWeek as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(SystemTime),
            "::",
            stringify!(DayOfTheWeek)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<SystemTime>())).Day as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(SystemTime),
            "::",
            stringify!(Day)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<SystemTime>())).Hour as *const _ as usize },
        10usize,
        concat!(
            "Offset of field: ",
            stringify!(SystemTime),
            "::",
            stringify!(Hour)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<SystemTime>())).Minute as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(SystemTime),
            "::",
            stringify!(Minute)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<SystemTime>())).Second as *const _ as usize },
        14usize,
        concat!(
            "Offset of field: ",
            stringify!(SystemTime),
            "::",
            stringify!(Second)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<SystemTime>())).Milliseconds as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(SystemTime),
            "::",
            stringify!(Milliseconds)
        )
    );
}
pub const SystemArchitecture_Unknown: SystemArchitecture = 0;
pub const SystemArchitecture_x64: SystemArchitecture = 1;
pub type SystemArchitecture = u32;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct SystemInfo {
    pub PageSize: u32,
    pub Architecture: SystemArchitecture,
    pub NumberOfProcessors: u32,
    pub AllocationGranularity: u32,
    pub MinimumApplicationAddress: usize,
    pub MaximumApplicationAddress: usize,
}
#[test]
fn bindgen_test_layout_SystemInfo() {
    assert_eq!(
        ::core::mem::size_of::<SystemInfo>(),
        32usize,
        concat!("Size of: ", stringify!(SystemInfo))
    );
    assert_eq!(
        ::core::mem::align_of::<SystemInfo>(),
        8usize,
        concat!("Alignment of ", stringify!(SystemInfo))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<SystemInfo>())).PageSize as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(SystemInfo),
            "::",
            stringify!(PageSize)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<SystemInfo>())).Architecture as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(SystemInfo),
            "::",
            stringify!(Architecture)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<SystemInfo>())).NumberOfProcessors as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(SystemInfo),
            "::",
            stringify!(NumberOfProcessors)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::core::ptr::null::<SystemInfo>())).AllocationGranularity as *const _ as usize
        },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(SystemInfo),
            "::",
            stringify!(AllocationGranularity)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::core::ptr::null::<SystemInfo>())).MinimumApplicationAddress as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(SystemInfo),
            "::",
            stringify!(MinimumApplicationAddress)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::core::ptr::null::<SystemInfo>())).MaximumApplicationAddress as *const _ as usize
        },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(SystemInfo),
            "::",
            stringify!(MaximumApplicationAddress)
        )
    );
}
pub const GenericAccess_Read: GenericAccess = 1;
pub const GenericAccess_Write: GenericAccess = 2;
pub const GenericAccess_ReadWrite: GenericAccess = 3;
pub type GenericAccess = c_types::c_int;
pub const StandardHandle_Input: StandardHandle = 0;
pub const StandardHandle_Output: StandardHandle = 1;
pub const StandardHandle_Error: StandardHandle = 2;
pub type StandardHandle = c_types::c_int;
pub type Handle = *mut c_types::c_void;
pub type HThread = *mut c_types::c_void;
pub type HProcess = *mut c_types::c_void;
pub type HSharedMemory = *mut c_types::c_void;
pub type HRingBuffer = *mut c_types::c_void;
pub type HWindow = *mut c_types::c_void;
pub type HFile = *mut c_types::c_void;
pub type HEvent = *mut c_types::c_void;
pub type ThreadStart =
    ::core::option::Option<unsafe extern "C" fn(parameter: *mut c_types::c_void) -> size_t>;
pub type VirtualKey = u16;
pub const MessageType_KeyEvent: MessageType = 0;
pub const MessageType_MouseEvent: MessageType = 1;
pub const MessageType_PaintEvent: MessageType = 2;
pub type MessageType = c_types::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct MessageHeader {
    pub MessageType: MessageType,
}
#[test]
fn bindgen_test_layout_MessageHeader() {
    assert_eq!(
        ::core::mem::size_of::<MessageHeader>(),
        4usize,
        concat!("Size of: ", stringify!(MessageHeader))
    );
    assert_eq!(
        ::core::mem::align_of::<MessageHeader>(),
        4usize,
        concat!("Alignment of ", stringify!(MessageHeader))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<MessageHeader>())).MessageType as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(MessageHeader),
            "::",
            stringify!(MessageType)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct KeyEvent {
    pub Key: VirtualKey,
    pub Flags: KeyEvent__bindgen_ty_1,
}
#[repr(C)]
#[repr(align(2))]
#[derive(Debug, Copy, Clone)]
pub struct KeyEvent__bindgen_ty_1 {
    pub _bitfield_align_1: [u8; 0],
    pub _bitfield_1: __BindgenBitfieldUnit<[u8; 1usize]>,
    pub __bindgen_padding_0: u8,
}
#[test]
fn bindgen_test_layout_KeyEvent__bindgen_ty_1() {
    assert_eq!(
        ::core::mem::size_of::<KeyEvent__bindgen_ty_1>(),
        2usize,
        concat!("Size of: ", stringify!(KeyEvent__bindgen_ty_1))
    );
    assert_eq!(
        ::core::mem::align_of::<KeyEvent__bindgen_ty_1>(),
        2usize,
        concat!("Alignment of ", stringify!(KeyEvent__bindgen_ty_1))
    );
}
impl KeyEvent__bindgen_ty_1 {
    #[inline]
    pub fn Pressed(&self) -> u16 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(0usize, 1u8) as u16) }
    }
    #[inline]
    pub fn set_Pressed(&mut self, val: u16) {
        unsafe {
            let val: u16 = ::core::mem::transmute(val);
            self._bitfield_1.set(0usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn new_bitfield_1(Pressed: u16) -> __BindgenBitfieldUnit<[u8; 1usize]> {
        let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 1usize]> = Default::default();
        __bindgen_bitfield_unit.set(0usize, 1u8, {
            let Pressed: u16 = unsafe { ::core::mem::transmute(Pressed) };
            Pressed as u64
        });
        __bindgen_bitfield_unit
    }
}
#[test]
fn bindgen_test_layout_KeyEvent() {
    assert_eq!(
        ::core::mem::size_of::<KeyEvent>(),
        4usize,
        concat!("Size of: ", stringify!(KeyEvent))
    );
    assert_eq!(
        ::core::mem::align_of::<KeyEvent>(),
        2usize,
        concat!("Alignment of ", stringify!(KeyEvent))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<KeyEvent>())).Key as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(KeyEvent),
            "::",
            stringify!(Key)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<KeyEvent>())).Flags as *const _ as usize },
        2usize,
        concat!(
            "Offset of field: ",
            stringify!(KeyEvent),
            "::",
            stringify!(Flags)
        )
    );
}
#[repr(C, packed)]
#[derive(Debug, Copy, Clone)]
pub struct MouseButtonState {
    pub _bitfield_align_1: [u8; 0],
    pub _bitfield_1: __BindgenBitfieldUnit<[u8; 1usize]>,
}
#[test]
fn bindgen_test_layout_MouseButtonState() {
    assert_eq!(
        ::core::mem::size_of::<MouseButtonState>(),
        1usize,
        concat!("Size of: ", stringify!(MouseButtonState))
    );
    assert_eq!(
        ::core::mem::align_of::<MouseButtonState>(),
        1usize,
        concat!("Alignment of ", stringify!(MouseButtonState))
    );
}
impl MouseButtonState {
    #[inline]
    pub fn LeftPressed(&self) -> u8 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(0usize, 1u8) as u8) }
    }
    #[inline]
    pub fn set_LeftPressed(&mut self, val: u8) {
        unsafe {
            let val: u8 = ::core::mem::transmute(val);
            self._bitfield_1.set(0usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn RightPressed(&self) -> u8 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(1usize, 1u8) as u8) }
    }
    #[inline]
    pub fn set_RightPressed(&mut self, val: u8) {
        unsafe {
            let val: u8 = ::core::mem::transmute(val);
            self._bitfield_1.set(1usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn new_bitfield_1(
        LeftPressed: u8,
        RightPressed: u8,
    ) -> __BindgenBitfieldUnit<[u8; 1usize]> {
        let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 1usize]> = Default::default();
        __bindgen_bitfield_unit.set(0usize, 1u8, {
            let LeftPressed: u8 = unsafe { ::core::mem::transmute(LeftPressed) };
            LeftPressed as u64
        });
        __bindgen_bitfield_unit.set(1usize, 1u8, {
            let RightPressed: u8 = unsafe { ::core::mem::transmute(RightPressed) };
            RightPressed as u64
        });
        __bindgen_bitfield_unit
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct MouseEvent {
    pub Buttons: MouseButtonState,
    pub XPosition: u16,
    pub YPosition: u16,
}
